--- a/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
+++ b/src/app/modules/dialog-select-membership/dialog-select-membership.component.html
@@ -35,7 +35,7 @@
         </div>
     </div>-->
     <!--SECCION PARA VER SERVICIOS-->
-    <div class="services_table" *ngIf="optionToShow == 2">
+    <div class="services_table" *ngIf="optionToShow == 2 || optionToShow == 5">
         <h2 *ngIf="dataSource && dataSource.data && dataSource.data.length > 0">{{dataSource.data[0].titulo}}</h2>
         <div *ngIf="dataSource.data.length == 0" class="center-container">
             <div><strong>Sin servicios</strong>
